@@ -1,4 +1,4 @@
-DIST smartcvs-generic-7_0_7.tar.gz 7278979 RMD160 f3f663d65abc5cb5fc332d56ffae5eb457201e0b SHA1 2a3f10cf7ff9d755c9866fb8129ed4733a1dd230 SHA256 92d0094861032ff604e1714a9e10eb8c5fbc10e855089d1f93112720871e7c24
-EBUILD smartcvs-7.0.7.ebuild 985 RMD160 606496abf990120122e2b679882232385dac3965 SHA1 99f06887adbf2d94a7ca08a2b750123d83f5d70f SHA256 59796dfad13968e49c96c112113e37ab92970e7f1c2eb87403b22babcbc4d2c4
-MISC ChangeLog 424 RMD160 4e3793231bac899382e494d428c6cdfc923ec6d6 SHA1 7139e06c82f179b80d3108486f3f30b16fc54c41 SHA256 44aa65421a07bfbc6d549184b23ad9cc7ecc539e5bcb917e3d1295e50fe65e94
+DIST smartcvs-generic-7_0_8.tar.gz 7252051 RMD160 8eb6f73353967b4f969fd6ab35aba535bf73b88f SHA1 b8c98c48e47e2d4dca63d60867743d56192d0d51 SHA256 922c441e38f784b6bfbefde8be2e089f461cbd854f0c5c9faa37cdc90ab301dc
+EBUILD smartcvs-7.0.8.ebuild 1070 RMD160 7ebcd37364d18ebeda317c684c73388a38fe53c6 SHA1 621bbd20b1fcc53ef25821f77c48e34b93073b55 SHA256 74a7db0649e920dd7e917dac08779ec07af4206737e462eee0faf11d88daa63d
+MISC ChangeLog 600 RMD160 f7d11c84cfc0dc1ccf498113603d1d46a43692d5 SHA1 9c931cde21dac9c24c6ee4eb7087efe24617ac6b SHA256 e7044abe7dc61e86524d92f2e46cba92d571d2fbacbe79c7b5b9562d6b9f8b31
 MISC metadata.xml 263 RMD160 c831d150127c3f28e0432001456062256ec2a7dc SHA1 ac4f7701853461192d8830c4b2763151e0c6adfe SHA256 7815d8221dd843dd8c3f2e4d40b4ca38df80169b9f15e4cd88fc8a75b742a2bf
