@@ -2,7 +2,7 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-inherit eutils
+inherit eutils java-pkg-2
 
 MY_PV=${PV//./_}
 MY_P=smartcvs-generic-${MY_PV}
@@ -23,15 +23,18 @@ RDEPEND=">=virtual/jre-1.4.1"
 S="${WORKDIR}/${PN}-${MY_PV}"
 
 src_install() {
-	insinto /opt/smartcvs
+	local rdir="/opt/${PN}"
+	insinto ${rdir}
 	doins -r *
-	fperms +x /opt/smartcvs/bin/smartcvs.sh
-	dosym /opt/smartcvs/bin/smartcvs.sh /usr/bin/
+
+	java-pkg_regjar ${rdir}/lib/${PN}.jar
+
+	java-pkg_dolauncher ${PN} "--java-args -Xmx256 --jar ${PN}.jar"
 
 	for X in 32 48 64 128
 	do
 		insinto /usr/share/icons/hicolor/${X}x${X}/apps
-		newins "${S}/bin/${PN}-${X}x${X}.png" "${PN}.png"
+		newins "${S}/bin/${PN}-${X}x${X}.png" "${PN}.png" || die "cannot install needed files"
 	done
 
 	make_desktop_entry ${PN}.sh "SmartCVS" ${PN}.png "Development;RevisionControl"
